Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1100,11 +1100,11 @@ VIEW_PROPOSAL
                         </div>
                         <div class="glass-panel p-6 rounded-xl text-center w-64 hover:bg-white/5 transition-all duration-300 group border-t border-transparent hover:border-accent-gold/30">
                             <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border border-white/10 mb-4 group-hover:scale-110 transition-transform duration-500 bg-white/10"><img src="student-1.jpg" class="w-full h-full object-cover grayscale group-hover:grayscale-0"></div>
-                            <h4 class="font-bold font-orbitron text-white">Harini Sree</h4><p class="text-[10px] text-gray-400 font-bold uppercase mt-1 tracking-wider group-hover:text-accent-gold transition-colors">Mission Director</p>
+                            <h4 class="font-bold font-orbitron text-white">Tejasree</h4><p class="text-[10px] text-gray-400 font-bold uppercase mt-1 tracking-wider group-hover:text-accent-gold transition-colors">Mission Director</p>
                         </div>
                         <div class="glass-panel p-6 rounded-xl text-center w-64 hover:bg-white/5 transition-all duration-300 group border-t border-transparent hover:border-accent-gold/30">
                             <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border border-white/10 mb-4 group-hover:scale-110 transition-transform duration-500 bg-white/10"><img src="student-5.jpg" class="w-full h-full object-cover grayscale group-hover:grayscale-0"></div>
-                            <h4 class="font-bold font-orbitron text-white">Tejasree</h4><p class="text-[10px] text-gray-400 font-bold uppercase mt-1 tracking-wider group-hover:text-accent-gold transition-colors">Logistics</p>
+                            <h4 class="font-bold font-orbitron text-white">Harini Sree</h4><p class="text-[10px] text-gray-400 font-bold uppercase mt-1 tracking-wider group-hover:text-accent-gold transition-colors">Logistics</p>
                         </div>
                     </div>
                 </div>
@@ -1754,3 +1754,4 @@ icon.style.transform = 'rotate(0deg)';
 </script>
 </body>
 </html>
+
