--- a/merchandise.html
+++ b/merchandise.html
@@ -118,7 +118,7 @@ tailwind.config = {
 
     <!-- NAV -->
     <nav class="fixed top-0 w-full z-50 backdrop-blur-md border-b border-primary/30 h-20 flex items-center px-6 justify-between">
-        <a href="index37.html" class="flex items-center space-x-2 group">
+        <a href="index.html" class="flex items-center space-x-2 group">
             <span class="material-icons text-primary text-3xl group-hover:-translate-x-1 transition-transform">arrow_back_ios</span>
             <span class="font-orbitron font-bold text-sm tracking-widest uppercase text-white/70 group-hover:text-white transition-colors">Return to Base</span>
         </a>
@@ -366,4 +366,5 @@ tailwind.config = {
         animateParticles();
     </script>
 </body>
+
 </html>
