Fix HTML encoding issues in sponsor.html

--- a/sponsor.html
+++ b/sponsor.html
@@ -150,7 +150,7 @@ tailwind.config = {
 <nav class="fixed top-0 w-full z-50 backdrop-blur-xl bg-white/90 border-b border-white/20 shadow-lg nav-wrapper opacity-0">
     <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
         <!-- LEFT: Logo -->
-        <a href="index37.html" class="flex items-center space-x-3 cursor-pointer group">
+        <a href="index.html" class="flex items-center space-x-3 cursor-pointer group">
             <div class="w-10 h-10 bg-gradient-to-br from-red-600 to-orange-500 rounded-lg flex items-center justify-center shadow-orange-glow group-hover:rotate-12 transition-transform duration-500 text-white">
                 <span class="material-icons">rocket_launch</span>
             </div>
@@ -161,11 +161,11 @@ tailwind.config = {
 
         <!-- CENTER: Links -->
         <div class="hidden md:flex space-x-8 items-center font-orbitron text-[11px] font-bold tracking-[0.2em] uppercase text-slate-600">
-            <a class="hover:text-accent-gold transition-colors relative group py-2" href="index37.html">
+            <a class="hover:text-accent-gold transition-colors relative group py-2" href="index.html">
                 Mission
                 <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-gold transition-all duration-300 group-hover:w-full"></span>
             </a>
-            <a class="hover:text-accent-gold transition-colors relative group py-2" href="index37.html">
+            <a class="hover:text-accent-gold transition-colors relative group py-2" href="index.html">
                 Rewards
                 <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-gold transition-all duration-300 group-hover:w-full"></span>
             </a>
@@ -173,7 +173,7 @@ tailwind.config = {
 
         <!-- RIGHT: Buttons -->
         <div class="flex items-center gap-4">
-            <a href="index37.html" class="bg-slate-900 hover:bg-accent-gold text-white px-6 py-2 rounded-full font-bold text-sm transition-all shadow-lg hover:shadow-orange-glow transform hover:-translate-y-0.5">
+            <a href="index.html" class="bg-slate-900 hover:bg-accent-gold text-white px-6 py-2 rounded-full font-bold text-sm transition-all shadow-lg hover:shadow-orange-glow transform hover:-translate-y-0.5">
                 Register
             </a>
             <!-- School Logo -->
@@ -371,4 +371,5 @@ function submitSponsorship(form) {
 }
 </script>
 </body>
+
 </html>
