--- a/register.html
+++ b/register.html
@@ -225,25 +225,25 @@ Your browser does not support HTML5 video.
 <nav class="fixed top-0 w-full z-50 backdrop-blur-md border-b border-primary/30 nav-wrapper opacity-0">
 <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
 <!-- LEFT: Logo Image -->
-<a href="index38.html" class="flex items-center space-x-4 rounded-full overflow-hidden bg-white/5" aria-label="AEROCREST 2026">
+<a href="index.html" class="flex items-center space-x-4 rounded-full overflow-hidden bg-white/5" aria-label="AEROCREST 2026">
     <div class="h-20 w-20 rounded-full bg-center bg-cover shadow-[0_0_20px_rgba(196,30,58,0.6)]" style="background-image: url('logooo.png');"></div>
     <span class="sr-only">AEROCREST 2026</span>
 </a>
 <!-- CENTER: Links (Hidden on Mobile) -->
     <div class="hidden md:flex space-x-8 items-center font-orbitron text-[10px] font-bold tracking-[0.2em] uppercase">
-        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index38.html#mission">
+        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index.html#mission">
             <span class="relative z-10">Mission</span>
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-mars transition-all duration-300 group-hover:w-full"></span>
         </a>
-        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index38.html#timeline">
+        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index.html#timeline">
             <span class="relative z-10">Timeline</span>
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-mars transition-all duration-300 group-hover:w-full"></span>
         </a>
-        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index38.html#challenges">
+        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index.html#challenges">
             <span class="relative z-10">Challenges</span>
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-mars transition-all duration-300 group-hover:w-full"></span>
         </a>
-        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index38.html#rewards">
+        <a class="nav-link hover:text-accent-mars transition-colors relative overflow-hidden group" href="index.html#rewards">
             <span class="relative z-10">Rewards</span>
             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-accent-mars transition-all duration-300 group-hover:w-full"></span>
         </a>
@@ -795,4 +795,5 @@ icon.style.transform = 'rotate(0deg)';
 });
 </script>
 </body>
+
 </html>
