--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ transition: opacity 0.3s;
     textarea,
     [role="button"],
     .cursor-pointer {
-        cursor: url('Star Wars/astro-cursor.cur') 2 2, auto;
+        cursor: url('astro-cursor.cur') 2 2, auto;
     }
 }
 </style>
@@ -1376,3 +1376,4 @@ setTimeout(() => trail.remove(), 300);
 </script>
 </body>
 </html>
+
