--- a/register.html
+++ b/register.html
@@ -200,7 +200,7 @@ transition: opacity 0.3s;
     textarea,
     [role="button"],
     .cursor-pointer {
-        cursor: url('Star Wars/astro-cursor.cur') 2 2, auto;
+        cursor: url('astro-cursor.png') 2 2, auto;
     }
 }
 </style>
@@ -797,3 +797,4 @@ icon.style.transform = 'rotate(0deg)';
 </body>
 
 </html>
+
