--- a/sponsor.html
+++ b/sponsor.html
@@ -129,7 +129,7 @@ tailwind.config = {
     /* --- CUSTOM CURSOR --- */
     @media (pointer: fine) {
         body, a, button, input, textarea {
-            cursor: url('Star Wars/astro-cursor.cur') 2 2, auto;
+            cursor: url('astro-cursor.png') 2 2, auto;
         }
     }
 </style>
@@ -373,3 +373,4 @@ function submitSponsorship(form) {
 </body>
 
 </html>
+
